// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard matches snapshot with no accounts 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={0} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={0} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-noAccountsPaper-5\\">
                    <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-noAccountsPaper-5\\">
                      <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-noAccountsPaper-5 MuiPaper-rounded\\">
                        <WithStyles(ForwardRef(Typography)) variant=\\"h6\\">
                          <ForwardRef(Typography) classes={{...}} variant=\\"h6\\">
                            <h6 className=\\"MuiTypography-root MuiTypography-h6\\">
                              You don&#39;t have any accounts yet.
                            </h6>
                          </ForwardRef(Typography)>
                        </WithStyles(ForwardRef(Typography))>
                        <WithStyles(ForwardRef(Button)) variant=\\"contained\\" color=\\"secondary\\" component={{...}} className=\\"DashboardComponent-newAccountButton-6\\">
                          <ForwardRef(Button) classes={{...}} variant=\\"contained\\" color=\\"secondary\\" component={{...}} className=\\"DashboardComponent-newAccountButton-6\\">
                            <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root DashboardComponent-newAccountButton-6 MuiButton-contained MuiButton-containedSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                              <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root DashboardComponent-newAccountButton-6 MuiButton-contained MuiButton-containedSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                <ForwardRef className=\\"MuiButtonBase-root MuiButton-root DashboardComponent-newAccountButton-6 MuiButton-contained MuiButton-containedSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                  <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root DashboardComponent-newAccountButton-6 MuiButton-contained MuiButton-containedSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                    <a className=\\"MuiButtonBase-root MuiButton-root DashboardComponent-newAccountButton-6 MuiButton-contained MuiButton-containedSecondary\\" onBlur={[Function]} onClick={[Function: onClick]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\">
                                      <span className=\\"MuiButton-label\\">
                                        Add an account
                                      </span>
                                      <NoSsr>
                                        <WithStyles(undefined) center={false}>
                                          <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                            <span className=\\"MuiTouchRipple-root\\">
                                              <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                            </span>
                                          </ForwardRef(TouchRipple)>
                                        </WithStyles(undefined)>
                                      </NoSsr>
                                    </a>
                                  </Link>
                                </ForwardRef>
                              </ForwardRef(ButtonBase)>
                            </WithStyles(ForwardRef(ButtonBase))>
                          </ForwardRef(Button)>
                        </WithStyles(ForwardRef(Button))>
                        <WithStyles(ForwardRef(Typography)) variant=\\"body1\\">
                          <ForwardRef(Typography) classes={{...}} variant=\\"body1\\">
                            <p className=\\"MuiTypography-root MuiTypography-body1\\">
                              You can keep track of all the accounts you have from any institution.
                            </p>
                          </ForwardRef(Typography)>
                        </WithStyles(ForwardRef(Typography))>
                      </div>
                    </ForwardRef(Paper)>
                  </WithStyles(ForwardRef(Paper))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;

exports[`Dashboard matches snapshot with one account 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={1000} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={1000} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                    <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                      <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                                <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                                    <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                        <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                          Total
                                        </p>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                        <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                          €1,000.00
                                        </h5>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                          <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                            <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                              <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                                <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                  <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                                </svg>
                                              </ForwardRef(SvgIcon)>
                                            </WithStyles(ForwardRef(SvgIcon))>
                                          </ForwardRef>
                                        </div>
                                      </ForwardRef(Paper)>
                                    </WithStyles(ForwardRef(Paper))>
                                  </div>
                                </ForwardRef(Paper)>
                              </WithStyles(ForwardRef(Paper))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                                <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={12} md={6}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={12} md={6}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6\\">
                                          <withRouter(AccountsTable) filter=\\"Assets\\">
                                            <AccountsTable filter=\\"Assets\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-213\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-213\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-213 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-214\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-214\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-214 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Assets
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €1,000.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <AccountsChart data={{...}} filter=\\"Assets\\">
                                                      <ResponsiveContainer height={200} width=\\"100%\\" debounce={0}>
                                                        <div id={[undefined]} className=\\"recharts-responsive-container\\" style={{...}}>
                                                          <PieChart layout=\\"centric\\" stackOffset=\\"none\\" barCategoryGap=\\"10%\\" barGap={4} margin={{...}} reverseStackOrder={false} startAngle={0} endAngle={360} cx=\\"50%\\" cy=\\"50%\\" innerRadius={0} outerRadius=\\"80%\\" width={0} height={200} />
                                                          <ResizeDetector handleWidth={true} handleHeight={true} onResize={[Function]} skipOnMount={false} refreshRate={1000} refreshMode={[undefined]} resizableElementId=\\"\\">
                                                            <div style={{...}} />
                                                          </ResizeDetector>
                                                        </div>
                                                      </ResponsiveContainer>
                                                    </AccountsChart>
                                                    <WithStyles(ForwardRef(Table)) size=\\"small\\">
                                                      <ForwardRef(Table) classes={{...}} size=\\"small\\">
                                                        <table className=\\"MuiTable-root\\">
                                                          <WithStyles(ForwardRef(TableHead))>
                                                            <ForwardRef(TableHead) classes={{...}}>
                                                              <thead className=\\"MuiTableHead-root\\">
                                                                <WithStyles(ForwardRef(TableRow))>
                                                                  <ForwardRef(TableRow) classes={{...}}>
                                                                    <tr className=\\"MuiTableRow-root MuiTableRow-head\\">
                                                                      <WithStyles(ForwardRef(TableCell))>
                                                                        <ForwardRef(TableCell) classes={{...}}>
                                                                          <th className=\\"MuiTableCell-root MuiTableCell-sizeSmall MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\">
                                                                            Institution / Account
                                                                          </th>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <th className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\">
                                                                            Total EUR
                                                                          </th>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                              </thead>
                                                            </ForwardRef(TableHead)>
                                                          </WithStyles(ForwardRef(TableHead))>
                                                          <WithStyles(ForwardRef(TableBody))>
                                                            <ForwardRef(TableBody) classes={{...}}>
                                                              <tbody className=\\"MuiTableBody-root\\">
                                                                <WithStyles(ForwardRef(TableRow)) className=\\"makeStyles-institutionRow-215\\">
                                                                  <ForwardRef(TableRow) classes={{...}} className=\\"makeStyles-institutionRow-215\\">
                                                                    <tr className=\\"MuiTableRow-root makeStyles-institutionRow-215\\">
                                                                      <WithStyles(ForwardRef(TableCell)) className=\\"makeStyles-institutionWrapper-216\\">
                                                                        <ForwardRef(TableCell) classes={{...}} className=\\"makeStyles-institutionWrapper-216\\">
                                                                          <td className=\\"MuiTableCell-root makeStyles-institutionWrapper-216 MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"makeStyles-institutionIcon-217\\">
                                                                              <InstitutionIcon classes={{...}} institution=\\"TD\\" size=\\"small\\" className=\\"makeStyles-institutionIcon-217\\">
                                                                                <ForwardRef className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                  <WithStyles(ForwardRef(SvgIcon)) className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                    <ForwardRef(SvgIcon) classes={{...}} className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                      <svg className=\\"MuiSvgIcon-root InstitutionIcon-small-245 makeStyles-institutionIcon-217\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                                        <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                                                      </svg>
                                                                                    </ForwardRef(SvgIcon)>
                                                                                  </WithStyles(ForwardRef(SvgIcon))>
                                                                                </ForwardRef>
                                                                              </InstitutionIcon>
                                                                            </WithStyles(InstitutionIcon)>
                                                                            <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                                              <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                                                <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                                  TD
                                                                                </h6>
                                                                              </ForwardRef(Typography)>
                                                                            </WithStyles(ForwardRef(Typography))>
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <td className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                                              <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                                                <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                                  €1,000.00
                                                                                </h6>
                                                                              </ForwardRef(Typography)>
                                                                            </WithStyles(ForwardRef(Typography))>
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                                <WithStyles(ForwardRef(TableRow)) hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                  <ForwardRef(TableRow) classes={{...}} hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                    <tr className=\\"MuiTableRow-root makeStyles-accountRow-218 MuiTableRow-hover\\" onClick={[Function: onClick]}>
                                                                      <WithStyles(ForwardRef(TableCell)) className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                        <ForwardRef(TableCell) classes={{...}} className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                          <td className=\\"MuiTableCell-root makeStyles-accountWrapper-219 MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]} title={[undefined]} />
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <td className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            €1,000.00
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                              </tbody>
                                                            </ForwardRef(TableBody)>
                                                          </WithStyles(ForwardRef(TableBody))>
                                                        </table>
                                                      </ForwardRef(Table)>
                                                    </WithStyles(ForwardRef(Table))>
                                                    <div className=\\"makeStyles-newAccountButton-223\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[Function: onClick]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\">
                                                                    <span className=\\"MuiButton-label\\">
                                                                      New account
                                                                    </span>
                                                                    <NoSsr>
                                                                      <WithStyles(undefined) center={false}>
                                                                        <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                          <span className=\\"MuiTouchRipple-root\\">
                                                                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                          </span>
                                                                        </ForwardRef(TouchRipple)>
                                                                      </WithStyles(undefined)>
                                                                    </NoSsr>
                                                                  </a>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={12} md={6}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={12} md={6}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6\\">
                                          <withRouter(AccountsTable) filter=\\"Liabilities\\">
                                            <AccountsTable filter=\\"Liabilities\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-213\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-213\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-213 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-214\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-214\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-214 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Liabilities
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <WithStyles(ForwardRef(Typography)) variant=\\"caption\\" align=\\"center\\" paragraph={true} className=\\"makeStyles-emptyChart-221\\">
                                                      <ForwardRef(Typography) classes={{...}} variant=\\"caption\\" align=\\"center\\" paragraph={true} className=\\"makeStyles-emptyChart-221\\">
                                                        <p className=\\"MuiTypography-root makeStyles-emptyChart-221 MuiTypography-caption MuiTypography-paragraph MuiTypography-alignCenter\\">
                                                          Not enough data to display chart
                                                        </p>
                                                      </ForwardRef(Typography)>
                                                    </WithStyles(ForwardRef(Typography))>
                                                    <div className=\\"makeStyles-newAccountButton-223\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[Function: onClick]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\">
                                                                    <span className=\\"MuiButton-label\\">
                                                                      New account
                                                                    </span>
                                                                    <NoSsr>
                                                                      <WithStyles(undefined) center={false}>
                                                                        <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                          <span className=\\"MuiTouchRipple-root\\">
                                                                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                          </span>
                                                                        </ForwardRef(TouchRipple)>
                                                                      </WithStyles(undefined)>
                                                                    </NoSsr>
                                                                  </a>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                  </div>
                                </ForwardRef(Grid)>
                              </WithStyles(ForwardRef(Grid))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                      </div>
                    </ForwardRef(Grid)>
                  </WithStyles(ForwardRef(Grid))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;

exports[`Dashboard matches snapshot with two accounts in a different currency 1`] = `
"<BrowserRouter>
  <Router history={{...}}>
    <Provider store={{...}}>
      <Connect(WithStyles(DashboardComponent)) history={{...}}>
        <WithStyles(DashboardComponent) history={{...}} accounts={{...}} settings={{...}} totalBalance={2500} dispatch={[Function: dispatch]}>
          <DashboardComponent classes={{...}} history={{...}} accounts={{...}} settings={{...}} totalBalance={2500} dispatch={[Function: dispatch]}>
            <WithStyles(ForwardRef(Container))>
              <ForwardRef(Container) classes={{...}}>
                <div className=\\"MuiContainer-root MuiContainer-maxWidthLg\\">
                  <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                    <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                      <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaper-1\\">
                                <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaper-1\\">
                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaper-1 MuiPaper-rounded\\">
                                    <WithStyles(ForwardRef(Typography)) variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"body1\\" color=\\"textSecondary\\" align=\\"right\\">
                                        <p className=\\"MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignRight\\">
                                          Total
                                        </p>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Typography)) variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                      <ForwardRef(Typography) classes={{...}} variant=\\"h5\\" align=\\"right\\" className=\\"DashboardComponent-balanceAmount-2\\">
                                        <h5 className=\\"MuiTypography-root DashboardComponent-balanceAmount-2 MuiTypography-h5 MuiTypography-alignRight\\">
                                          €2,500.00
                                        </h5>
                                      </ForwardRef(Typography)>
                                    </WithStyles(ForwardRef(Typography))>
                                    <WithStyles(ForwardRef(Paper)) className=\\"DashboardComponent-balancePaperIcon-3\\">
                                      <ForwardRef(Paper) classes={{...}} className=\\"DashboardComponent-balancePaperIcon-3\\">
                                        <div className=\\"MuiPaper-root MuiPaper-elevation1 DashboardComponent-balancePaperIcon-3 MuiPaper-rounded\\">
                                          <ForwardRef className=\\"DashboardComponent-balanceIcon-4\\">
                                            <WithStyles(ForwardRef(SvgIcon)) className=\\"DashboardComponent-balanceIcon-4\\">
                                              <ForwardRef(SvgIcon) classes={{...}} className=\\"DashboardComponent-balanceIcon-4\\">
                                                <svg className=\\"MuiSvgIcon-root DashboardComponent-balanceIcon-4\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                  <path d=\\"M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z\\" />
                                                </svg>
                                              </ForwardRef(SvgIcon)>
                                            </WithStyles(ForwardRef(SvgIcon))>
                                          </ForwardRef>
                                        </div>
                                      </ForwardRef(Paper)>
                                    </WithStyles(ForwardRef(Paper))>
                                  </div>
                                </ForwardRef(Paper)>
                              </WithStyles(ForwardRef(Paper))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                        <WithStyles(ForwardRef(Grid)) item={true} xs={12}>
                          <ForwardRef(Grid) classes={{...}} item={true} xs={12}>
                            <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12\\">
                              <WithStyles(ForwardRef(Grid)) container={true} spacing={3}>
                                <ForwardRef(Grid) classes={{...}} container={true} spacing={3}>
                                  <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3\\">
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={12} md={6}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={12} md={6}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6\\">
                                          <withRouter(AccountsTable) filter=\\"Assets\\">
                                            <AccountsTable filter=\\"Assets\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-213\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-213\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-213 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-214\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-214\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-214 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Assets
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €2,500.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <AccountsChart data={{...}} filter=\\"Assets\\">
                                                      <ResponsiveContainer height={200} width=\\"100%\\" debounce={0}>
                                                        <div id={[undefined]} className=\\"recharts-responsive-container\\" style={{...}}>
                                                          <PieChart layout=\\"centric\\" stackOffset=\\"none\\" barCategoryGap=\\"10%\\" barGap={4} margin={{...}} reverseStackOrder={false} startAngle={0} endAngle={360} cx=\\"50%\\" cy=\\"50%\\" innerRadius={0} outerRadius=\\"80%\\" width={0} height={200} />
                                                          <ResizeDetector handleWidth={true} handleHeight={true} onResize={[Function]} skipOnMount={false} refreshRate={1000} refreshMode={[undefined]} resizableElementId=\\"\\">
                                                            <div style={{...}} />
                                                          </ResizeDetector>
                                                        </div>
                                                      </ResponsiveContainer>
                                                    </AccountsChart>
                                                    <WithStyles(ForwardRef(Table)) size=\\"small\\">
                                                      <ForwardRef(Table) classes={{...}} size=\\"small\\">
                                                        <table className=\\"MuiTable-root\\">
                                                          <WithStyles(ForwardRef(TableHead))>
                                                            <ForwardRef(TableHead) classes={{...}}>
                                                              <thead className=\\"MuiTableHead-root\\">
                                                                <WithStyles(ForwardRef(TableRow))>
                                                                  <ForwardRef(TableRow) classes={{...}}>
                                                                    <tr className=\\"MuiTableRow-root MuiTableRow-head\\">
                                                                      <WithStyles(ForwardRef(TableCell))>
                                                                        <ForwardRef(TableCell) classes={{...}}>
                                                                          <th className=\\"MuiTableCell-root MuiTableCell-sizeSmall MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\">
                                                                            Institution / Account
                                                                          </th>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <th className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-head\\" aria-sort={{...}} scope=\\"col\\">
                                                                            Total EUR
                                                                          </th>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                              </thead>
                                                            </ForwardRef(TableHead)>
                                                          </WithStyles(ForwardRef(TableHead))>
                                                          <WithStyles(ForwardRef(TableBody))>
                                                            <ForwardRef(TableBody) classes={{...}}>
                                                              <tbody className=\\"MuiTableBody-root\\">
                                                                <WithStyles(ForwardRef(TableRow)) className=\\"makeStyles-institutionRow-215\\">
                                                                  <ForwardRef(TableRow) classes={{...}} className=\\"makeStyles-institutionRow-215\\">
                                                                    <tr className=\\"MuiTableRow-root makeStyles-institutionRow-215\\">
                                                                      <WithStyles(ForwardRef(TableCell)) className=\\"makeStyles-institutionWrapper-216\\">
                                                                        <ForwardRef(TableCell) classes={{...}} className=\\"makeStyles-institutionWrapper-216\\">
                                                                          <td className=\\"MuiTableCell-root makeStyles-institutionWrapper-216 MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            <WithStyles(InstitutionIcon) institution=\\"TD\\" size=\\"small\\" className=\\"makeStyles-institutionIcon-217\\">
                                                                              <InstitutionIcon classes={{...}} institution=\\"TD\\" size=\\"small\\" className=\\"makeStyles-institutionIcon-217\\">
                                                                                <ForwardRef className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                  <WithStyles(ForwardRef(SvgIcon)) className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                    <ForwardRef(SvgIcon) classes={{...}} className=\\"InstitutionIcon-small-245 makeStyles-institutionIcon-217\\">
                                                                                      <svg className=\\"MuiSvgIcon-root InstitutionIcon-small-245 makeStyles-institutionIcon-217\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden=\\"true\\" role=\\"presentation\\">
                                                                                        <path d=\\"M4 10v7h3v-7H4zm6 0v7h3v-7h-3zM2 22h19v-3H2v3zm14-12v7h3v-7h-3zm-4.5-9L2 6v2h19V6l-9.5-5z\\" />
                                                                                      </svg>
                                                                                    </ForwardRef(SvgIcon)>
                                                                                  </WithStyles(ForwardRef(SvgIcon))>
                                                                                </ForwardRef>
                                                                              </InstitutionIcon>
                                                                            </WithStyles(InstitutionIcon)>
                                                                            <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                                              <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                                                <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                                  TD
                                                                                </h6>
                                                                              </ForwardRef(Typography)>
                                                                            </WithStyles(ForwardRef(Typography))>
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <td className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                                              <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                                                <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                                  €2,500.00
                                                                                </h6>
                                                                              </ForwardRef(Typography)>
                                                                            </WithStyles(ForwardRef(Typography))>
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                                <WithStyles(ForwardRef(TableRow)) hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                  <ForwardRef(TableRow) classes={{...}} hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                    <tr className=\\"MuiTableRow-root makeStyles-accountRow-218 MuiTableRow-hover\\" onClick={[Function: onClick]}>
                                                                      <WithStyles(ForwardRef(TableCell)) className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                        <ForwardRef(TableCell) classes={{...}} className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                          <td className=\\"MuiTableCell-root makeStyles-accountWrapper-219 MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]} title={[undefined]} />
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <td className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            €1,000.00
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                                <WithStyles(ForwardRef(TableRow)) hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                  <ForwardRef(TableRow) classes={{...}} hover={true} onClick={[Function: onClick]} className=\\"makeStyles-accountRow-218\\">
                                                                    <tr className=\\"MuiTableRow-root makeStyles-accountRow-218 MuiTableRow-hover\\" onClick={[Function: onClick]}>
                                                                      <WithStyles(ForwardRef(TableCell)) className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                        <ForwardRef(TableCell) classes={{...}} className=\\"makeStyles-accountWrapper-219\\" title={[undefined]}>
                                                                          <td className=\\"MuiTableCell-root makeStyles-accountWrapper-219 MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]} title={[undefined]} />
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                      <WithStyles(ForwardRef(TableCell)) align=\\"right\\">
                                                                        <ForwardRef(TableCell) classes={{...}} align=\\"right\\">
                                                                          <td className=\\"MuiTableCell-root MuiTableCell-alignRight MuiTableCell-sizeSmall MuiTableCell-body\\" aria-sort={{...}} scope={[undefined]}>
                                                                            €1,500.00
                                                                          </td>
                                                                        </ForwardRef(TableCell)>
                                                                      </WithStyles(ForwardRef(TableCell))>
                                                                    </tr>
                                                                  </ForwardRef(TableRow)>
                                                                </WithStyles(ForwardRef(TableRow))>
                                                              </tbody>
                                                            </ForwardRef(TableBody)>
                                                          </WithStyles(ForwardRef(TableBody))>
                                                        </table>
                                                      </ForwardRef(Table)>
                                                    </WithStyles(ForwardRef(Table))>
                                                    <div className=\\"makeStyles-newAccountButton-223\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[Function: onClick]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\">
                                                                    <span className=\\"MuiButton-label\\">
                                                                      New account
                                                                    </span>
                                                                    <NoSsr>
                                                                      <WithStyles(undefined) center={false}>
                                                                        <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                          <span className=\\"MuiTouchRipple-root\\">
                                                                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                          </span>
                                                                        </ForwardRef(TouchRipple)>
                                                                      </WithStyles(undefined)>
                                                                    </NoSsr>
                                                                  </a>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                    <WithStyles(ForwardRef(Grid)) item={true} xs={12} md={6}>
                                      <ForwardRef(Grid) classes={{...}} item={true} xs={12} md={6}>
                                        <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6\\">
                                          <withRouter(AccountsTable) filter=\\"Liabilities\\">
                                            <AccountsTable filter=\\"Liabilities\\" history={{...}} location={{...}} match={{...}} staticContext={[undefined]}>
                                              <WithStyles(ForwardRef(Paper)) className=\\"makeStyles-accountsTable-213\\">
                                                <ForwardRef(Paper) classes={{...}} className=\\"makeStyles-accountsTable-213\\">
                                                  <div className=\\"MuiPaper-root MuiPaper-elevation1 makeStyles-accountsTable-213 MuiPaper-rounded\\">
                                                    <WithStyles(ForwardRef(Grid)) container={true} className=\\"makeStyles-header-214\\">
                                                      <ForwardRef(Grid) classes={{...}} container={true} className=\\"makeStyles-header-214\\">
                                                        <div className=\\"MuiGrid-root makeStyles-header-214 MuiGrid-container\\">
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle2\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle2\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle2\\">
                                                                Liabilities
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                          <WithStyles(ForwardRef(Typography)) variant=\\"subtitle1\\">
                                                            <ForwardRef(Typography) classes={{...}} variant=\\"subtitle1\\">
                                                              <h6 className=\\"MuiTypography-root MuiTypography-subtitle1\\">
                                                                €0.00
                                                              </h6>
                                                            </ForwardRef(Typography)>
                                                          </WithStyles(ForwardRef(Typography))>
                                                        </div>
                                                      </ForwardRef(Grid)>
                                                    </WithStyles(ForwardRef(Grid))>
                                                    <WithStyles(ForwardRef(Typography)) variant=\\"caption\\" align=\\"center\\" paragraph={true} className=\\"makeStyles-emptyChart-221\\">
                                                      <ForwardRef(Typography) classes={{...}} variant=\\"caption\\" align=\\"center\\" paragraph={true} className=\\"makeStyles-emptyChart-221\\">
                                                        <p className=\\"MuiTypography-root makeStyles-emptyChart-221 MuiTypography-caption MuiTypography-paragraph MuiTypography-alignCenter\\">
                                                          Not enough data to display chart
                                                        </p>
                                                      </ForwardRef(Typography)>
                                                    </WithStyles(ForwardRef(Typography))>
                                                    <div className=\\"makeStyles-newAccountButton-223\\">
                                                      <WithStyles(ForwardRef(Button)) color=\\"secondary\\" component={{...}}>
                                                        <ForwardRef(Button) classes={{...}} color=\\"secondary\\" component={{...}}>
                                                          <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                            <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiButton-root MuiButton-text MuiButton-textSecondary\\" component={{...}} disabled={false} focusRipple={true} focusVisibleClassName=\\"Mui-focusVisible\\" type=\\"button\\">
                                                              <ForwardRef className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false}>
                                                                <Link to=\\"/accounts/new\\" className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[undefined]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} innerRef={[Function]}>
                                                                  <a className=\\"MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary\\" onBlur={[Function]} onClick={[Function: onClick]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onDragLeave={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={0} role=\\"button\\" aria-disabled={false} href=\\"/accounts/new\\">
                                                                    <span className=\\"MuiButton-label\\">
                                                                      New account
                                                                    </span>
                                                                    <NoSsr>
                                                                      <WithStyles(undefined) center={false}>
                                                                        <ForwardRef(TouchRipple) classes={{...}} center={false}>
                                                                          <span className=\\"MuiTouchRipple-root\\">
                                                                            <TransitionGroup component={{...}} exit={true} childFactory={[Function: childFactory]} />
                                                                          </span>
                                                                        </ForwardRef(TouchRipple)>
                                                                      </WithStyles(undefined)>
                                                                    </NoSsr>
                                                                  </a>
                                                                </Link>
                                                              </ForwardRef>
                                                            </ForwardRef(ButtonBase)>
                                                          </WithStyles(ForwardRef(ButtonBase))>
                                                        </ForwardRef(Button)>
                                                      </WithStyles(ForwardRef(Button))>
                                                    </div>
                                                  </div>
                                                </ForwardRef(Paper)>
                                              </WithStyles(ForwardRef(Paper))>
                                            </AccountsTable>
                                          </withRouter(AccountsTable)>
                                        </div>
                                      </ForwardRef(Grid)>
                                    </WithStyles(ForwardRef(Grid))>
                                  </div>
                                </ForwardRef(Grid)>
                              </WithStyles(ForwardRef(Grid))>
                            </div>
                          </ForwardRef(Grid)>
                        </WithStyles(ForwardRef(Grid))>
                      </div>
                    </ForwardRef(Grid)>
                  </WithStyles(ForwardRef(Grid))>
                </div>
              </ForwardRef(Container)>
            </WithStyles(ForwardRef(Container))>
          </DashboardComponent>
        </WithStyles(DashboardComponent)>
      </Connect(WithStyles(DashboardComponent))>
    </Provider>
  </Router>
</BrowserRouter>"
`;
